@@ -1,0 +1,8 @@
+
+<div class="setup-wrapper">
+
+    <div class="mat-elevation-z4 setup">
+      <h3>Setup wizard</h3>
+    </div>
+
+  </div>
