@@ -1,0 +1,15 @@
+
+import { Component, OnInit } from '@angular/core';
+
+@Component({
+  selector: 'app-evaluator',
+  templateUrl: './setup.component.html',
+  styleUrls: ['./setup.component.scss']
+})
+export class SetupComponent implements OnInit {
+
+  constructor() { }
+
+  ngOnInit() {
+  }
+}
